DOC-1777: 6.3-release-notes.adoc
Added skeletons for Checklist 2.0.2 and Comments 3.2.0 sub-sections in the Accompanying Premium Plugin changes section. Also filled in some blanks in the extant Merge Tags plugin sub-section.

--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -81,11 +81,43 @@ In concert with the changes noted above to the question mark icon in **Accessibi
 
 For information on the **Accessibility Checker** plugin, see: xref:a11ychecker.adoc[Accessibility Checker].
 
-=== Merge tags <merge tags version number>
+=== Checklist 2.0.2
+
+The {productname} 6.3 release includes an accompanying release of the **Checklist** premium plugin.
+
+**Checklist** 2.0.2 includes one fix:
+
+==== Checklist toggling did not preserve selection when used on an existing list.
+
+// write-up here
+
+For information on the **Checklist** plugin, see xref:checklist.adoc[Checklist].
+
+
+=== Comments 3.2.0
+
+The {productname} 6.3 release includes an accompanying release of the **Comments** premium plugin.
+
+**Comments** 3.2.0 includes one fix and one change:
+
+==== A comment could be inserted when in an empty editor or block
+
+// write-up here
+
+==== Selection now expands to select the entirety of what a comment will be added to when clicking the toolbar or menu buttons
+
+// write-up here
+
+For information on the **Comments** plugin, see: xref:introduction-to-tiny-comments.adoc[Introduction to Tiny Comments].
+
+
+=== Merge tags 1.1.0
 
 The {productname} 6.3 release includes an accompanying release of the **Merge tags** premium plugin.
 
-// merge tags change documentation here.
+**Merge Tags 1.1.0 includes one fix:
+
+// write-up here
 
 For information on the **Merge tags** plugin, see: xref:mergetags.adoc[Merge Tags].
 
