--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -220,10 +220,13 @@ For information on:
 === Color picker dialog now starts on the appropriate color for the cursor position.
 
 // https://ephocks.atlassian.net/browse/TINY-9213
-// cause
-// consequence
-// fix
-// result
+// @bforte review required.
+{productname} 6.3 introduced a new improvement to the color picker dialog that allows the user to easily identify the pre-populated color for the `selected-text` with a visual ✔️ which is nested inside the color box dialog associated with the user `text-selection` within the editor.
+
+The benefits from this improvement is that it allows the user to easily identify the location for the default/custom color in the dialog based on the current `text-selection`, and identifying the #Hex value for the `selected` color when the user hovers over a color in the dialog.
+
+With {productname} 6.3 the `getCurrentColor` now checks for the first found `backcolor` and `forecolor` color before the parent color based on the user cursor positioning.
+
 // https://www.notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
@@ -235,10 +238,22 @@ For information on:
 === New expand function added to tinymce.selection which expands the selection around the nearest word.
 
 // https://ephocks.atlassian.net/browse/TINY-9001
-// cause
-// consequence
-// fix
-// result
+// @bforte re-review as small changes where made to cover the `tinymce.dom.RangeUtils` also in more detail.
+{productname} 6.3 introduced two new API functions that allow a user to select a word from the insertion point location which applies a new `expand` feature.
+
+This new `tinymce.selection` API function allows {productname} users and developers to expand the selection range to contain the entire word when the selection is collapsed within the word.
+
+To support this new API function, {product name} 6.3 introduced `tinymce.dom.RangeUtils`, which is focuses on a new `expand` method range that expands around the entire word that the user selection was collapsed within by the `tinymce.selection` API function.
+
+If, in the following example, a user places the insertion point between the first and second `m` in the word, `comment`, then clicks the _Add comment_ toolbar button, or selects _Insert > Add comment_ from the TinyMCE menu, or presses the _Add comment_ keyboard shortcut  (eg ⌘+⌥+M) — 
+
+[source,html]
+----
+<p>
+  <span class="mce-annotation tox-comment" data-mce-annotation-uid="mce-conversation_58585987121669010253247" data-mce-annotation="tinycomments">Comment</span>
+</p>
+----
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
@@ -253,52 +268,59 @@ For information on:
 
 
 === New color_map_background and color_map_foreground option which sets the base colors used in the backcolor and forecolor toolbar buttons and menu items.
-
-// https://ephocks.atlassian.net/browse/TINY-9184
-// cause
-// consequence
-// fix
-// result
-// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
-
-
 === Added optional storageKey property to colorinput component and colorswatch fancy menu item.
 
 // https://ephocks.atlassian.net/browse/TINY-9184
-// cause
-// consequence
-// fix
-// result
+// @bforte review required
+{productname} 6.3 introduced two new palettes for the `color_map_background` and `color_map_foreground`, which have now been separated.  In {productname} 6.3, when a user adds a custom color to the `color_map_background` pallet, the editor will not replicate the new color in the `color_map_foreground` pallet as it used to.
+
+The feature introduced changes to the `colorcache` which is no longer considered to be a singleton.  The `colorcache` can now be accessed with the help of a custom ID, which can now create custom `color_map` colors, selected by the user to be assigned to either the `backcolor` or `forecolor` pallets separately.
+
+To accompany this feature {productmame} 6.3 now allows for separate `storage` keys to be created for the pre-provided colors in `color_map_forground` and `color_map_background` respectively, and versions for `color_cols`.
+
+These will still `default` to the shared or previous values as before, if no separate values are set.
+In addition one can now access these as a `developer`.
+
+
+Key feature points saw the introduction for new expanded sets for `color_map` and `color_col`.  And the added optional `storageKey` property to `colorinput` component and `colorswatch`.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
 === New addView function added to editor.ui.registry which makes it possible to register custom editor views.
-
-// https://ephocks.atlassian.net/browse/TINY-9210
-// cause
-// consequence
-// fix
-// result
-// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
-
-
 === New ToggleView command which makes it possible to hide or show registered custom views.
 
 // https://ephocks.atlassian.net/browse/TINY-9210
-// cause
-// consequence
-// fix
-// result
+// @bforte review required -- Feedback provided is to keep this minimal.
+{productname} 6.3 now gives users the ability to register `custom` editor views with use of the new  `addView` API.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
 === New color_default_foreground and color_default_background options to set the initial default color for the forecolor and backcolor toolbar buttons and menu items.
 
 // https://ephocks.atlassian.net/browse/TINY-9183
-// cause
-// consequence
-// fix
-// result
+// @bforte review required.
+{productname} 6.3 adds a new feature that allows the default color for the `color_default_foreground` and `color_default_background` in the toolbar button menu to be pre-defined.
+
+The `color_default_foreground` and `color_default_background` colors are pre-defined by including them in `tinymce.init`
+
+In the example below, the foreground color is set to red and the background color is set to a shade of cyan.
+
+As the example shows, these colors can be defined by either name or hex #.
+
+[source,js]
+----
+<script type="text/javascript">
+tinymce.init({
+    	selector: "textarea",
+	color_default_background: 'red',
+	color_default_foreground: '#0DEDFF',
+	toolbar: 'forecolor backcolor fontsize'
+});
+</script>
+----
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
@@ -314,10 +336,14 @@ For information on:
 === Added `ToggleToolbarDrawer` event to subscribe to toolbar’s opening and closing. 
 
 // https://ephocks.atlassian.net/browse/TINY-9271
-// cause
-// consequence
-// fix
-// result
+In {productname} 6.3 a new event was added that allows the `ToggleToolbarDrawer` to subscribe to the toolbar's opening and closing actions.
+
+In previous versions of {productname}, when the `ToggleToolbarDrawer` was set to `toolbar_mode: "sliding"` or `toolbar_mode: “floating”,` the `ToggleToolbarDrawer` did not create an opening or closing event.
+
+With {productname} 6.3, a new feature has been introduced to ensure that, when the `ToggleToolbarDrawer` is triggered, the new event initializes an `onToggle` callback that propagates the `OuterContainer` component for `SplitSlidingToolbar` and `SplitFloatingToolbar`.
+
+Once the `OuterContainer` component event is triggered, the console records either a `true` or `false` action that calls on the `onToggled` callback which supports the `FloatingToolbarButton` and `SplitFloatingToolbar` components.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
@@ -350,10 +376,13 @@ For information on:
 === `setContent` is now allowed to accept any custom keys and values as a second options argument.
 
 // https://ephocks.atlassian.net/browse/TINY-9143
-// cause
-// consequence
-// fix
-// result
+// @bforte review required
+In {productname} 6.3 release, changes have been made to the `setContent` feature that now allows the editor to accept any custom `[key: string]: (value) any;` as a second option argument when the user inserts content.
+
+The improvements to this feature give the user more flexibility with the `getContent` and `setContent` features.
+
+New tests have been added to the `setContent` feature in {product name} 6.3 that now checks if content manipulation in `BeforeSetContent` callback is possible so it can pass the custom data `object` to the `getContent` feature allowing it to set both the content and action events.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
@@ -387,20 +416,22 @@ This regression has been addressed in {productname} 6.3. Dragging elements conta
 === Range expanding capabilities would behave inconsistently depending on where the cursor was placed.
 
 // https://ephocks.atlassian.net/browse/TINY-9029
-// cause
-// consequence
-// fix
-// result
+// @bforte review required.
+In previous versions of {productname}, the behavior for the `ExpandRange.ts:expandRng()` function was to set both the range just `before` and just `after` a word in a string which was not the case.
+
+As a result of the issue, it was discovered that the string `ExpandRange.ts:expandRng()` function that checks the location of the user cursor before and after was affecting the for-loop in `walkText-implementation`.
+
+Fixes were applied to the `tinymce.activeEditor.selection.expand()` function which is responsible for directly affecting the white space next to a word that is accompanied with a `space-separated` instance.  In {productname} 6.3, the `ExpandRange.ts:expandRng()` function now behaves as intended with any element such as text, special character, styles or elements with contenteditable="false” attributes.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
 === Compilation errors were thrown when using TypeScript 4.8.
 
 // https://ephocks.atlassian.net/browse/TINY-9161
-// cause
-// consequence
-// fix
-// result
+// @bforte review required (Feedback >> Ben + Luke mentioned not something we need to really cover!)
+Note: With the release for 6.3, {productname} made updates to the latest `rollup-plugin-dts` versions to pull in a fix that was generating invalid generics.  The update allowed for a smooth transition from `typescript`: “^4.7.4” to `typescript`: "^4.8.3" which also fixed various compilation errors that were occurring.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
@@ -459,6 +490,7 @@ In {productname} 6.3 this header no longer presents when the {productname} toolb
 === Matches of inline text patterns that are similar are now managed correctly.
 
 // https://ephocks.atlassian.net/browse/TINY-8949
+// bforte "This is covered in 8947 in bugfixes"
 // cause
 // consequence
 // fix
@@ -491,6 +523,7 @@ A fix was applied to the logic to ensure it could handle such cases, and prevent
 
 
 === The editor.selection.getRng() API was not returning a proper range on hidden editors in Firefox.
+=== The editor.selection.getBookmark() API was not returning a proper bookmark on hidden editors in Firefox.
 
 // https://ephocks.atlassian.net/browse/TINY-9259
 In contrast to other supported browsers, Firefox did not return the selected object or the selection range from iframes that are hidden by the `display: none` attribute.
@@ -498,16 +531,6 @@ In contrast to other supported browsers, Firefox did not return the selected obj
 As a consequence, when a {productname} instance was running on Firefox, the `window.getSelection()` API for an iframe returned `null` if the iframe was hidden. This, further, resulted in the `editor.selection.getRng()` and `editor.selection.getBookmark()` APIs returning incorrect data from hidden editors when Firefox was the host browser.
 
 This has been fixed in {productname} 6.3. All browsers, including Firefox, now return the correct values even when the iframe is hidden.
-
-
-=== The editor.selection.getBookmark() API was not returning a proper bookmark on hidden editors in Firefox.
-
-// https://ephocks.atlassian.net/browse/TINY-9259
-// cause
-// consequence
-// fix
-// result
-// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
 === Dragging a noneditable element before or after another noneditable element now works correctly.
@@ -530,20 +553,23 @@ the string _non-editable text_ could not be dragged to before the opening `+<p>+
 === The restored selection after a redo or undo action was not scrolled into view.
 
 // https://ephocks.atlassian.net/browse/TINY-9222
-// cause
-// consequence
-// fix
-// result
+// @bforte pending review
+Prior to the {productname} 6.3 release, executing an undo or redo function in the editor would not scroll to `show` the new cursor location after the function is executed, meaning the user would have to manually scroll to their last `undo` or `redo` position.
+
+With the {productname} 6.3 release, a fix was applied to allow the scroll function to reposition the users caret to the last known `undo` or `redo` location.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
 === A newline could not be inserted when the selection was restored from a bookmark after an inline contenteditable="false" element.
 
 // https://ephocks.atlassian.net/browse/TINY-9194
-// cause
-// consequence
-// fix
-// result
+// @bforte pending review
+In versions of {productname}, the `Enter` key would not move the caret after a `mergeTag` insertion occurred in the editor.
+
+This meant that a newline could not be inserted when the selection was restored from a `bookmark` positioning after an inline `contenteditable="false"` element.
+
+A fix was applied to the core `SelectionOverrides` settings to ensure that the user selection restores from the `bookmark` positioning before and after a `contenteditable="false"` element in {product name} 6.3.
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
@@ -562,10 +588,13 @@ As of {productname} 6.3, the `content_css_cors` option now configures the `tinym
 === The caret was moved to the previous line when a text pattern executed a `mceInsertContent` command on Enter key when running on Firefox.
 
 // https://ephocks.atlassian.net/browse/TINY-9193
-// cause
-// consequence
-// fix
-// result
+// @bforte review required.
+In previous versions of {productname}, Firefox would display unusual behavioural characteristics after a specific sequence of commands were executed, causing text patterns to force the caret position to the previous line.
+
+As a result, users that where using (a) The specific browser `firefox` (b) Previous versions of {productname}, this would create UX issues when the user would try to create a `mergeTag` directly after a `Enter` execution from the previous line in the editor.
+
+In {productname} 6.3, users or developers that work inside of `Firefox` can now create `mergeTags` without the caret changing position based on a `Enter` execution.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
