--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -60,6 +60,18 @@ Previously, **Accessibility Checker** incorrectly flagged xref:mergetags.adoc[Me
 With this update, the **Accessibility Checker** plugin ignores Merge Tag prefixes and suffixes, as expected.
 
 ==== Added a new rule to show a warning when the alternative text of an image exceeds 100 characters
+// @bforte review required
+In {productname} 6.3, a new function was introduced that added a new rule to show a warning to the user when the alternative text of an image either exceeds 100 characters or when alternative text is not present for an image.
+
+Warning prompts will be displayed as below examples.
+
+When the alternative text exceeds the rule (>100) message will display `Image alternative text should be less than 100 characters`
+Secondary message will display if this rule is triggered reading `Alternative text is (number) characters`, which provides the user with a `num_value` in which the alternative text count currently is.
+
+If alternative text cannot be found, the message will display `Images must have an alternative text description.  Decorative images are not allowed`
+
+Worth noting, if the user attempts to replace the alternative text with the same content as the `file_name` and click `repair`, the dialog will now display an error with the message `Alternative text must not be the same as the image filename`.
+
 
 **Accessibility Checker** 3.1.0 now includes a rule that, when applied, shows a warning dialog when an image’s alternative (`+alt+`) text attribute exceeds 100 characters. This dialog also presents the alternative text in an editable field, for immediate repair.
 
@@ -70,6 +82,12 @@ Previously, all **Accessibility Checker** warning dialogs presented with a trian
 With this update, **Accessibility Checker** shows a level-specific icon with each alert.
 
 ==== improves the discoverability of the question mark button in warning dialogs
+// @bforte review required
+In {productname} 6.3 improvements were made to the `Help` icon in the accessibility checker dialog.
+
+The changes made to the icon involved re-adjusting the icon’s text alignment to `centered`, decreasing the font size for the subheadings under the label of  `issue, warning and error`.  
+
+Additional changes were made to remove borders from the exterior of the description field, while adjusting the contrast colors to ensure they matched the `background-color` for the icon changes that were added in {productname}’s 6.3 release also.
 
 Many **Accessibility Checker** dialogs include a question mark icon. This icon is also a link to further information about the discovered issue.
 
@@ -78,6 +96,18 @@ This update includes changes to the presentation of this icon to make its being 
 ==== improves the legibility of warning dialogs
 
 In concert with the changes noted above to the question mark icon in **Accessibility Checker** dialogs, legibility improvements were made to the presentation and typography of these dialogs.
+
+==== Added correct icons in dialog alert panel for each severity level
+// @bforte review required
+In {productname} 6.3, improvements for accessibility checker were added to provide additional support for users when trying to identify different alerts such as `info | warning or error` icons.
+
+In previous versions of {productname} the accessibility checker used the same triangle warning icon for all alerts when displayed.  With the improvements made in 6.3, each icon will now display as its own unique icon with a matching pair color style to provide a better UX for all users and developers.
+
+Warning alert now displays as an `exclamation` mark nested inside a `yellow` colored `round circle`.
+Error alert now displays as an `exclamation` mark nested inside a `red` colored  `triangle`.
+Success alert now displays as a `green` tick.
+
+Other benefits from the introduction of this improvement made in {productname}'s 6.3 release is that users requiring visual aids will be able to enjoy the benefits of a improved user experience if they choose to upgrade to {product name} 6.3.
 
 For information on the **Accessibility Checker** plugin, see: xref:a11ychecker.adoc[Accessibility Checker].
 
@@ -89,7 +119,10 @@ The {productname} 6.3 release includes an accompanying release of the **Checklis
 
 ==== Checklist toggling did not preserve selection when used on an existing list.
 
-// write-up here
+// @bforte review required.
+In previous versions of {productname}, when selecting content over either an ordered or unordered list, then switching the list to a checklist would not preserve the user's selection of the content.
+
+In {productname} 6.3, the user selection is now preserved when toggling a list to a checklist.
 
 For information on the **Checklist** plugin, see xref:checklist.adoc[Checklist].
 
@@ -102,11 +135,15 @@ The {productname} 6.3 release includes an accompanying release of the **Comments
 
 ==== A comment could be inserted when in an empty editor or block
 
-// write-up here
+// @bforte review required
+In previous versions of {productname} a bug was found that allowed comments to be placed into an empty editor or block.
+
+With the update to {productname} 6.3, the comments button, menu-item, comment sidebar and shortcut keys for now disables this function when the editor contains no content.
 
 ==== Selection now expands to select the entirety of what a comment will be added to when clicking the toolbar or menu buttons
 
 // write-up here
+// @bforte This is already covered in // https://ephocks.atlassian.net/browse/TINY-8777 under TINY-9001 ??
 
 For information on the **Comments** plugin, see: xref:introduction-to-tiny-comments.adoc[Introduction to Tiny Comments].
 
@@ -117,7 +154,14 @@ The {productname} 6.3 release includes an accompanying release of the **Merge ta
 
 **Merge Tags 1.1.0 includes one fix:
 
-// write-up here
+// @bforte review required
+==== New mceMergeTag command to wrap selected content in a merge tag
+==== The autocompleter was triggered without being preceded by a merge tag prefix.
+
+In {productname} 6.2, the Merge Tags autocompleter would remain after being triggered, in the case where a merge tag was inserted by the 'mceMergeTag' command and not the autocompleter. 
+
+With the update to {productname} 6.3, the autocompleter now closes after the 'mceMergeTag' command is executed.
+
 
 For information on the **Merge tags** plugin, see: xref:mergetags.adoc[Merge Tags].
 
@@ -137,8 +181,15 @@ As of {productname} 6.3, the `lang` attribute inherits the default settings for 
 
 For information on the **Spellchecker Pro** plugin, see: xref:introduction-to-tiny-spellchecker.adoc[Spellchecker Pro].
 
+// @bforte added the below for Spelling AutoCorrect
+=== Spelling Autocorrect: (premium plugin)
 
+==== Removed redundant "pre-text" punctuation, before the word at the start of the sentence being capitalized, from start and replacement of text-pattern.
 
+In Spelling Autocorrect with `capitalization` enabled, any format which was applied at the beginning of a new sentence, after a full stop but before the start of the word, would be lost when the word is `capitalized` and replaced by the format at the end of the previous sentence. 
+
+In {productname} 6.3, this format is now retained when the word is capitalized.
+// end
 [[accompanying-premium-skins-and-icon-packs-changes]]
 == Accompanying Premium Skins and Icon Packs changes
 
@@ -197,16 +248,6 @@ For information on:
 
 {productname} 6.3 also includes the following improvements
 
-=== Transparent elements, like anchors, can now contain block elements.
-
-// https://ephocks.atlassian.net/browse/TINY-9172
-// cause
-// consequence
-// fix
-// result
-// https://www.notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
-
-
 === Colorswatch now displays a checkmark for selected color.
 
 // https://ephocks.atlassian.net/browse/TINY-9283
@@ -236,6 +277,7 @@ With {productname} 6.3 the `getCurrentColor` now checks for the first found `bac
 {productname} 6.3 also includes the following additions:
 
 === New expand function added to tinymce.selection which expands the selection around the nearest word.
+=== New expand function added to tinymce.dom.RangeUtils to return a new range expanded around the nearest word.
 
 // https://ephocks.atlassian.net/browse/TINY-9001
 // @bforte re-review as small changes where made to cover the `tinymce.dom.RangeUtils` also in more detail.
@@ -250,20 +292,12 @@ If, in the following example, a user places the insertion point between the firs
 [source,html]
 ----
 <p>
-  <span class="mce-annotation tox-comment" data-mce-annotation-uid="mce-conversation_58585987121669010253247" data-mce-annotation="tinycomments">Comment</span>
+  <span class="mce-annotation tox-comment" 
+  	data-mce-annotation-uid="mce-conversation_58585987121669010253247" 
+	data-mce-annotation="tinycomments">Comment</span>
 </p>
 ----
 
-// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
-
-
-=== New expand function added to tinymce.dom.RangeUtils to return a new range expanded around the nearest word.
-
-// https://ephocks.atlassian.net/browse/TINY-9001
-// cause
-// consequence
-// fix
-// result
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
@@ -313,7 +347,7 @@ As the example shows, these colors can be defined by either name or hex #.
 ----
 <script type="text/javascript">
 tinymce.init({
-    	selector: "textarea",
+    selector: "textarea",
 	color_default_background: 'red',
 	color_default_foreground: '#0DEDFF',
 	toolbar: 'forecolor backcolor fontsize'
@@ -323,14 +357,13 @@ tinymce.init({
 
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
-
 === New getTransparentElements function added to tinymce.html.Schema to return a map object of transparent HTML elements.
-
+=== Transparent elements, like anchors, are now allowed in the root of the editor body if they contain blocks.
+=== Transparent elements, like anchors, can now contain block elements.
 // https://ephocks.atlassian.net/browse/TINY-9172
-// cause
-// consequence
-// fix
-// result
+// @bforte review required
+In {productname} 6.3 block level links are now supported.
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 === Added `ToggleToolbarDrawer` event to subscribe to toolbar’s opening and closing. 
@@ -352,16 +385,6 @@ Once the `OuterContainer` component event is triggered, the console records eith
 == Changes
 
 {productname} 6.3 also incorporates the following changes:
-
-=== Transparent elements, like anchors, are now allowed in the root of the editor body if they contain blocks.
-
-// https://ephocks.atlassian.net/browse/TINY-9172
-// cause
-// consequence
-// fix
-// result
-// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
-
 
 === Colorswatch keyboard navigation now starts on currently selected color if present in the colorswatch.
 
@@ -478,23 +501,85 @@ In {productname} 6.3 this header no longer presents when the {productname} toolb
 
 
 === Inline text pattern no longer triggers if it matches only the end but not the start.
-
-// https://ephocks.atlassian.net/browse/TINY-8947
-// cause
-// consequence
-// fix
-// result
-// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
-
-
 === Matches of inline text patterns that are similar are now managed correctly.
 
+// https://ephocks.atlassian.net/browse/TINY-8947
 // https://ephocks.atlassian.net/browse/TINY-8949
-// bforte "This is covered in 8947 in bugfixes"
-// cause
-// consequence
-// fix
-// result
+// @bforte review required 2x versions for suggestions (MERGED 8949 into this!)
+Previously, to check if something matched a pattern, {productname} would first search for the end pattern and then check if the offset was long enough to be the start pattern.
+
+For example, consider a pattern that has a start = `**` and an end = `**`. And a document that consists of the following string: `a *test**`.
+
+{productname} would find the end — `**` — and would then look for the the offset between the two elements as length 2(` *`).
+
+In this circumstance, {productname} returned a match because the search mechanism searched within the nodes. Using the previous mechanism a start pattern like `**` would match, for example, `*<span class="not-visible"></span>*`.
+
+Example of what would happen when the issue would occur.
+
+`a *test**` became `a<em>test</em>`
+
+In {productname} 6.3 the mechanism now directly checks the text, and the text only, avoiding the errors caused by the previous mechanism.
+
+
+Notes
+
+The above edit still leaves me cold.
+
+What does start = `**` mean?
+
+Is `**` a string an end-user would enter, or a string an integrator would add to a configuration or other setup?
+
+If we have examples, are they in a particular syntax? Should they be presented as AsciiDoc code-blocks for syntax highlighting and, consequently, easier parsing? For example (and making a blind guess as to the underlying syntax):
+
+For example:
+
+[source,grep]
+----
+a *test**
+----
+
+would become
+
+[source,grep]
+----
+a<em>test</em>
+----
+
+Also, even re-presented like this, I’m unsure what _this_ becoming _that_ means?
+
+// @bforte version 2 for the above.
+Previously, to check if something matched a pattern, {productname} would first search for the end pattern and then check if the offset was long enough to be the start pattern.
+
+For example, consider you want to wrap a specific `text-selection` with a font-style `bold`. In previous versions of {productname}, when applying a pattern to apply font-styling `bold` you would add text pattern `**` before_the_word and `**` after_the_word, such as this `example *bold*`.
+
+{productname} would find the end `**` after_the_word and would then look for text pattern `**` before_the_word , but specifically for any offsets in between the two elements as length 2 (`**` equivilant to ` *` or `11` == `node_1,node2`).
+
+In this circumstance, `example bold*` would return a match because the search mechanism would check for the available node spaces before_the_word and `**` after_the_word.For example:
+
+[source,grep]
+----
+example bold* // renders `examplebold `
+----
+
+[source,grep]
+----
+<p>example<strong>bold</strong>&nbsp;</p>
+----
+The example above detected `1` missing text pattern, but also `1` available node space which triggered the mechanism to remove the node space _after_the_last_word, while replacing the missing text pattern `⤴*` _before_the_word.
+
+In {productname} 6.3 the mechanism now directly checks the text pattern before_the_word and _after_the_word only and apply the closest match based on the text patterns entered. Noted: If the user enter’s an incorrect text pattern that does not match both _before_the_word and after_the_word, the trailing text pattern will remain.For example:
+
+[source,grep]
+----
+example bold* // renders `example bold* 
+----
+
+[source,grep]
+----
+<p>example <em>bold</em>*&nbsp;</p>
+----
+// end
+
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
 
 
