--- a/modules/ROOT/partials/configuration/advanced-typography.adoc
+++ b/modules/ROOT/partials/configuration/advanced-typography.adoc
@@ -29,6 +29,15 @@ tinymce.init({
 == `+typography_custom_rules+`
 
 // What this option does, precisely.
+// questions still about `typography_custom_rules`.
+// from the supplied example it is unclear (to me, at least) what it does.
+// is `/"/g, "'"` just `sed` and `regex`?
+// and, even if so, I remain unclear as to what
+//     'en/quotes': (text) => text.replace(/"/g, "'"),
+// does to
+//     (text)
+// other than replace ? it with
+//     text.replace(/"/g, "'")
 
 *Type:* `+Object+`
 
