--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -53,6 +53,27 @@ tinymce.init({
 // And see the tech spec for @-rule support:
 // https://notion.so/tinycloud/Technical-specification-7c16d4522d1241ba9e7364880eab3e51#555fede3a4ff4a26ad5efdf72bc1af6f.
 
+// This plugin allows extracting the content of the editor with CSS inlined.
+// Support classic and inline modes. Can be used in shadow dom. 
+// Should be able to extract CSS from the stylesheets defined via
+// `content_css` and `font_css` options, and CSS styles defined via `style_css` option.
+// 
+// Does not support:
+// * Pseudo-classes ([MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes))
+//   - Example: `button:hover { color: blue; }`
+// * Pseudo-elements ([MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements))
+//   - Example: `p::first-line { color: blue; }`
+// * At rules ([MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/At-rule))
+//	  - Example: @media (screen)
+// * !important property
+//   
+
+// Does support: 
+// * @import with no at-rules at this stage
+// * some pseudo-class selectors. See the specification for more details
+// (https://notion.so/tinycloud/Technical-specification-7c16d4522d1241ba9e7364880eab3e51#94b1d13ff444492bbfce789f7876f39c)
+
+
 == Options
 
 The following configuration options affect the behavior of the {pluginname} plugin.
