--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -98,7 +98,7 @@ There is, as of this release, no specific workaround.
 ==== Fix removing spaces between ! ! (P3)
 
 // https://ephocks.atlassian.net/browse/TINY-9398
-
+// awaiting content as we don’t support `common/space/delBetweenExclamationMarks` currently.
 
 [[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
@@ -746,7 +746,25 @@ There are several known issues in {productname} 6.3.
 
 === The More button can disappear from the {productname} toolbar when exiting the inline code editor
 
-When the More button in the {productname} toolbar is open (ie, is set to display all of a multi-line toolbar), opening and closing the  xref:advcode.adoc[Advanced Code Editor] in inline mode causes the More button to disappear.
+When the More button in the {productname} toolbar is open (ie, is set to display all of a multi-line toolbar), opening and closing the xref:advcode.adoc[Advanced Code Editor] in inline mode can cause the More button to disappear.
+
+Specifically, when {productname} 6.3 is running `advcode_inline: true` and `toolbar_mode: sliding` specifically the `more` button disappears after clicking on the _Cancel_ button in the xref:advcode.adoc[Advanced Code Editor] viewport.
+
+This only occurs when the toolbar is forced into a viewport small enough to render the _More_ toolbar button inside the editor. As in the example below, which sets the viewport width to be less than the toolbar width.
+
+[source,js]
+----
+tinymce.init({
+    selector: "textarea",
+	width: 400,
+    plugins: [
+        "advcode",
+    ],
+	advcode_inline: true,
+	toolbar_mode: 'sliding',
+    toolbar: " undo redo | styles | bold italic underline strikethrough | code "
+});
+----
 
 A workaround does exist to resolve this issue: if the More button disappears, re-sizing the editor viewport forces it to re-display. Switching to Full Screen mode and back counts as re-sizing for this workaround’s purposes.
 
@@ -763,7 +781,7 @@ This is a presentation issue only. The _Click for more info_ button still works 
 
 There is, as of this release, no specific workaround.
 
-NOTE: if the _Click for more info_ button is navigated to using the Tab key, and then the  Return key is pressed to activate the button and load the more information page, the blue outline does appear in Safari 16.1 after the Return key is pressed.
+NOTE: if the _Click for more info_ button is navigated to using the Tab key, and then the Return key is pressed to activate the button and load the more information page, the blue outline does appear in Safari 16.1 after the Return key is pressed.
 
 
 === Checkmark over the current color is not displayed when ‘Text color’ or ‘Background color’ is accessed from the {productname} menu
