--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -86,9 +86,16 @@ As of this initial release of the xref:advanced-typography.adoc[Advanced typogra
 There is, as of this release, no specific workaround.
 
 
-==== Resolve conflict with typography and spellchecker (P3)
+==== The Advanced Typograhly plugin erroneously honors the current Spell Checker language selection
 
-// https://ephocks.atlassian.net/browse/TINY-9413
+There is currently a conflict between the selected Spell Checker language and the selected Advanced Typography language.
+
+When a Spell Checker language is specified, the Spell Checker adds a `lang=<language-value>` attribute to the `<body>` tag and the Advanced Typography plugin erroneously honours this attribute when applying Typography rules.
+
+Consequently, if, for example, the Advanced Typography plugin is set to Danish but the Spell Checker language is set to English, when Advanced Typography rules are applied, it is English-language rules that are applied to the text, not Danish language rules.
+
+As of this release, the only workaround is to either not specify a Spell Checker language or to make certain the currently specified Spell Checker language is the same as the desired Advanced Typography language.
+
 
 ==== Fix issues with quotation marks when switching to en_GB and de (P3)
 
